# COMP-3522_google_PageRank_assignment

./: .gitignore  CMakeLists.txt  Connectivity_Matrix.cpp  Connectivity_Matrix.hpp  Matrix.cpp  Matrix.hpp  Page.cpp  Page.hpp  Page_Matrix.cpp  Page_Matrix.hpp  Page_Ranker.cpp  Page_Ranker.hpp  Stochastic_Matrix.cpp  Stochastic_Matrix.hpp  catch.hpp  comp3522-assignment1.vsdx  connectivity.txt  fast_tests.cpp  fast_tests.hpp  main.cpp  readme.txt  test_connectivity_matrix.cpp  test_matrix.cpp  test_page_rank.cpp  test_stochastic_matrix.cpp
